# LearningGLUT

./: .gitignore  CMakeLists.txt
examples/: Estella_Triangulo_PeñafielKevin.cpp  FormaLobo.cpp  Ortho_Perspective_PeñafielKevin.cpp  points.cpp  polygon.cpp  test.cpp  vertices.cpp
lib/linux/: libglut.so.3.12.1
src/: FormaLobo.cpp  main.cpp  polygon.cpp  traingle.cpp
